# palantir

./: .gitignore  AGENTS.md  CONVERSATION.md  Cargo.toml  README.md  ROADMAP.md  bc_process.puml  conversation_codex.md  ontology_graph.json  palantir.db  run.sh
.cargo/: config.toml
assets/: index.html
crates/palantir-agent/: Cargo.toml
crates/palantir-agent/src/: agent.rs  lib.rs  tools.rs
crates/palantir-application/: Cargo.toml
crates/palantir-application/src/: action.rs  commands.rs  lib.rs  logic.rs  queries.rs  timeline.rs  workflow.rs
crates/palantir-domain/: Cargo.toml
crates/palantir-domain/src/: calculations.rs  errors.rs  events.rs  finance.rs  flight.rs  lib.rs  money.rs  order.rs  order_v1.rs  organization.rs  procurement.rs
crates/palantir-infrastructure/: Cargo.toml
crates/palantir-infrastructure/src/: datasource.rs  event_store.rs  export.rs  lib.rs
crates/palantir-infrastructure/src/persistence/: in_memory.rs  mod.rs
crates/palantir-ingest-api/: Cargo.toml
crates/palantir-ingest-api/src/: main.rs
crates/palantir-ingest-api/src/ui/: clean.html  connect.html  index.html  ingest_fold.html  ingest_project.html  ontology.html  projects.html  simple.html  sources.html  workspace.html
crates/palantir-ingest-api/src/ui/static/: README.md
crates/palantir-ontology-manager/: Cargo.toml
crates/palantir-ontology-manager/src/: adapters.rs  adapters_csv.rs  adapters_elasticsearch.rs  adapters_excel.rs  adapters_json.rs  adapters_kafka.rs  adapters_mongodb.rs  adapters_postgres.rs  adapters_rest.rs  adapters_s3.rs  adapters_sql.rs  errors.rs  lib.rs  manager.rs  mapping.rs  mapping_toml.rs  model.rs  repository.rs
crates/palantir-persistence/: Cargo.toml
crates/palantir-persistence/src/: db.rs  lib.rs
crates/palantir-pipeline/: Cargo.toml
crates/palantir-pipeline/src/: dataset.rs  lib.rs  transforms.rs
crates/palantir-storage/: Cargo.toml
crates/palantir-storage/src/: backend.rs  lib.rs  local.rs  manifest.rs  s3.rs  store.rs  writer.rs
data/airline/: airports.csv  flights.csv  passengers.csv
data/complex/: contracts.csv  departments.csv  divisions.csv  employees.csv  regions.csv
data/legacy/: order_events_v1.csv
data/multi_bc/: milestones.csv  projects.csv  purchase_orders.csv  tasks.csv
data/saga/: compensation.csv  happy_path.csv
data/sample/: demo.db  employees.csv  employees.json  events.jsonl
data/timeseries/: inventory_events.csv  payments.csv  time_travel_queries.csv  warehouses.csv
data/uploads/01c7991b-388a-4fe4-9261-8b2ac6d028a6/: employees.csv
data/uploads/294f92d8-8c87-431d-b943-f8afdebce743/: crew.csv  delays.csv
data/uploads/32ff76e1-fc69-42de-bb01-40dd6061ab47/: employees.csv  invoices.csv
data/uploads/55dcba59-7ee2-4d66-9b0c-6b3ee99dbb80/: assignments.csv
docs/: arch_v0.1.1.md  arch_v0.1.2.md  arch_v0.1.3.md  arch_v0.1.4.md  arch_v0.1.5.md  arch_v0.1.6.md  arch_vs_palantir.html  architecture_mindmap.html  comparison_ppt.html  data_silos.html  microservices_design.md  ontology_ai_architecture.html  ontology_ai_architecture.md  palantir_advantage.html  palantir_comparison.html  palantir_official_uml.html  patent.html  patent_draft.html  presentation.html  roadmap.md
docs/arch/: design-journal_2026-03-19.md  design-journal_2026-03-20.md  overview.md  overview_v0.1.6.md
examples/: 01_ddd_core.rs  02_ontology.rs  03_csv_adapter.rs  04_logic_and_workflow.rs  05_complex_discovery.rs  06_time_series.rs  07_event_sourcing.rs  08_multi_bc.rs  09_advanced_es.rs  10_policy_saga.rs  11_airline_ops.rs  12_ingest_csv_ontology.rs  14_agent_csv.rs
memory/: MEMORY.md  project_storage_architecture.md
src/: demo_setup.rs  lib.rs  main.rs
src/application/: action.rs  event_sourcing.rs  logic.rs  mod.rs  queries.rs  saga.rs  workflow.rs
src/domain/: calculations.rs  errors.rs  events.rs  finance.rs  mod.rs  money.rs  order.rs  order_v1.rs  organization.rs  procurement.rs
src/infrastructure/: datasource.rs  event_store.rs  export.rs  mod.rs
src/interface/: mod.rs
(+129 files in other folders)
