[workspace]
members = [
    "crates/palantir-ontology-manager",
    "crates/palantir-agent",
    "crates/palantir-ingest-api",
    "crates/palantir-persistence",
    "crates/palantir-storage",
]
default-members = [
    "crates/palantir-ingest-api",
]

[profile.dev]
debug = 0
split-debuginfo = "unpacked"
