[package]
name = "palantir_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
palantir_ontology_manager = { path = "../palantir-ontology-manager" }
time = { version = "0.3", features = ["serde-human-readable", "parsing"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
csv = "1"
