[package]
name = "palantir_infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
palantir_domain = { path = "../palantir-domain" }
palantir_pipeline = { path = "../palantir-pipeline" }
palantir_application = { path = "../palantir-application" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
