[package]
name = "palantir_ingest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
palantir_ontology_manager = { path = "../palantir-ontology-manager" }
palantir_persistence      = { path = "../palantir-persistence" }
csv = "1"
futures-util = "0.3"
time = { version = "0.3", features = ["serde-human-readable", "parsing"] }
anyhow = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
base64 = "0.21"
